--- a/views/repository.ejs
+++ b/views/repository.ejs
@@ -8,198 +8,93 @@
         <%= repository %>
     </title>
     <style>
+        /* General styling */
         body {
             font-family: Arial, sans-serif;
-            background-color: #1d1b34;
+            background-color: #f4f4f4;
             margin: 0;
-            padding: 0;
-        }
-
-        a {
-            width: 50px;
-            height: 50px;
-            border-radius: 30px;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 30px;
-        }
-
-        h1 {
-            color: white;
-        }
-
-        .header {
-            display: flex;
-            justify-content: space-between;
-            background-color: #1d1b34;
-            color: #fff;
             padding: 20px;
-            text-align: center;
-        }
-
-        .profile-button {
-            background-color: transparent;
-            border: none;
-            color: #fff;
-            font-size: 18px;
-            margin-right: 10px;
-            cursor: pointer;
-        }
-
-        header h1 {
-            font-size: 36px;
-        }
-
-        main {
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
+            align-items: flex-start;
         }
 
+        /* Styling for the file section */
         #file {
             background-color: #fff;
-            margin: 20px;
             padding: 20px;
-            width: 65%;
-            height: fit-content;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .view-file {
-            width: 600px;
-            height: fit-content;
-            border-radius: 10px;
-        }
-
-        #fileTree {
-            border-radius: 10px;
-            background-color: gray;
-        }
-
-        h2 {
-            color: #07a607;
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-
-        #info {
-            background-color: #fff;
-            margin: 20px;
-            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
             width: 30%;
-            max-height: 500px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            position: relative;
         }
 
-        #repo-container {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 30px;
-            border-radius: 20px;
+        /* Buttons in the file section */
+        #file button {
+            margin: 5px;
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        #file button:hover {
+            background-color: #e0e0e0;
+        }
+
+        /* Contents header */
+        #file h3 {
             margin-bottom: 20px;
         }
 
-        button {
-            background-color: #07a607;
-            color: #fff;
+        /* File view */
+        .view-file {
+            border: 1px solid #ccc;
+            height: max-content;
+            padding: 10px;
+            margin-bottom: 20px;
+        }
+
+        /* File content section */
+        #file-content {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 60%;
+        }
+
+        /* Styling for the info section */
+        #info {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 30%;
+        }
+
+        /* Actions section */
+        #info h2 {
+            margin-bottom: 15px;
+        }
+
+        #info button {
+            margin: 5px;
             padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            margin-top: 20px;
-            font-weight: bold;
-        }
-
-        textarea {
-            margin-top: 20px;
-            resize: none;
-            padding-left: 92px;
-            border: none;
-            tab-size: 8;
-            outline: none;
-            overflow: hidden;
-            height: auto;
-            width: 100%;
-            font-size: 12px;
-            line-height: 20px;
-            overflow-wrap: normal;
-            white-space: pre;
-        }
-
-        #repositoryForm {
-            color: #fff;
-            max-width: 900px;
-            max-height: max-content;
-            margin: auto;
-            padding: 10%;
-            background-color: #1d1b34;
-            border-radius: 10px;
-        }
-
-        #reponame,
-        #repodiscription {
-            width: 90%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 2px solid #07a607;
-            border-radius: 5px;
-        }
-
-        #topics {
-            width: 90%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 2px solid #07a607;
-            border-radius: 5px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 10px;
-            color: #07a607;
-            font-weight: bold;
-        }
-
-        #file {
-            width: 90%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 2px solid #07a607;
-            border-radius: 5px;
-        }
-
-        /* Style the buttons */
-        button {
-            padding: 10px 20px;
-            margin-right: 10px;
+            font-size: 16px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            background-color: #07a607;
-            color: #fff;
-            font-weight: bold;
+            transition: all 0.3s ease;
         }
 
-        /* Style the "Cancel" button */
-        button:nth-child(1) {
-            background-color: #07a607;
+        #info button:hover {
+            background-color: #e0e0e0;
         }
 
-        /* Style the "Create Repository" button */
-        button:nth-child(2) {
-            background-color: #191961;
-        }
-
-        /* Reset default margin and padding for ul */
         ul {
             margin: 0;
             padding: 0;
@@ -226,41 +121,45 @@
             cursor: pointer;
             /* Show pointer cursor on hover */
         }
+
+        textarea {
+            margin-top: 20px;
+            resize: none;
+            padding-left: 92px;
+            border: none;
+            tab-size: 8;
+            outline: none;
+            overflow: hidden;
+            height: auto;
+            width:80%;
+            font-size: 12px;
+            line-height: 20px;
+            overflow-wrap: normal;
+            white-space: pre;
+        }
     </style>
 </head>
 
 <body>
-    <div class="header">
-        <a href="/"><img src="/assets/logo2.jpg"></a>
-        <button class="profile-button" onclick="profile()">Profile</button>
-    </div>
-    <main id="main">
-        <section id="file">
-            <div id="fileTree"></div>
-            <button onclick="copy()">Copy</button>
-            <button onclick="edit()">Edit</button>
-            <button onclick="save()">Save</button>
-            <button onclick="cancel()">cancel</button>
-            <div class="view-file" id="repo-files"> </div>
-            <!-- <textarea id="view-file" aria-label="file content" aria-readonly="true" inputmode="none" tabindex="0"
-                    aria-multiline="true" aria-haspopup="false" data-gramm="false" data-gramm_editor="false"
-                    data-enable-grammarly="false" spellcheck="false" autocorrect="off" autocapitalize="off"
-                    autocomplete="off" data-ms-editor="false" readonly></textarea> -->
-
-
-        </section>
-        <section id="info">
-            <h2>Repository Details</h2>
-            <div id="details"></div>
-            <div>
-                <h2>Actions</h2>
-                <button onclick="settings()">settings</button>
-                <button>contributers</button>
-                <button>share</button>
-            </div>
-        </section>
-    </main>
-
+    <section id="file">
+        <button onclick="copy()">Copy</button>
+        <button onclick="edit()">Edit</button>
+        <button onclick="save()">Save</button>
+        <button onclick="cancel()">cancel</button>
+        <h3>Contents</h3>
+        <div class="view-file" id="repo-files"> </div>
+    </section>
+    <section id="file-content"></section>
+    <section id="info">
+        <h2>Repository Details</h2>
+        <div id="details"></div>
+        <div>
+            <h2>Actions</h2>
+            <button onclick="settings()">settings</button>
+            <button>contributers</button>
+            <button>share</button>
+        </div>
+    </section>
 </body>
 
 
@@ -270,63 +169,77 @@
     let fileName;
 
     function loadRepository() {
-  fetch(`/getRepository`, {
-    method: "POST",
-    headers: {
-      "Content-Type": "application/json",
-    },
-    body: JSON.stringify({
-      userId: username,
-      re: repository,
-    }),
-  })
-    .then((response) => {
-      if (!response.ok) {
-        throw new Error("Network response was not ok");
-      }
-      return response.json();
-    })
-    .then((data) => {
-      if (data.status === "success") {
-        const repository = data.repository;
-        const fileContents = data.fileContents;
-        const fileNames = data.fileNames;
+        fetch(`/getRepository`, {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+                userId: username,
+                re: repository,
+            }),
+        })
+            .then((response) => {
+                if (!response.ok) {
+                    throw new Error("Network response was not ok");
+                }
+                return response.json();
+            })
+            .then((data) => {
+                if (data.status === "success") {
+                    const repository = data.repository;
+                    const fileData = data.fileData;
 
-        const fileContentElement = document.getElementById("repo-files");
-        const repoDetails = document.getElementById("details");
-        fileContentElement.innerHTML = "";
-        repoDetails.innerHTML = "";
+                    const fileContentElement = document.getElementById("repo-files");
+                    const repoDetails = document.getElementById("details");
+                    fileContentElement.innerHTML = "";
+                    repoDetails.innerHTML = "";
 
-        repoDetails.innerHTML = `<h3>${repository.name}</h3><p>Description: ${repository.description || ' '}</p>
+                    repoDetails.innerHTML = `<h3>${repository.name}</h3><p>Description: ${repository.description || ' '}</p>
         <p>Topics: ${repository.topics || ' '}</p> <p>Contributers: ${repository.contributers || ' '} </p>`;
 
-        const fileListElement = document.createElement("ul");
-        fileListElement.className = "file-list";
+                    const fileListElement = document.createElement("ul");
+                    fileListElement.className = "file-list";
 
-        fileNames.forEach((fileName) => {
-          const listItem = document.createElement("li");
-          listItem.textContent = fileName;
-          listItem.addEventListener("click", () => {
-            loadFileContent(fileName);
-          });
-          fileListElement.appendChild(listItem);
-        });
-        fileContentElement.appendChild(fileListElement);
-      } else {
-        alert("Failed to load repository: " + data.message);
-      }
-    })
-    .catch((error) => {
-      console.error("Error loading repository", error);
-      alert("An error occurred while loading the repository. Please try again later.");
-    });
-}
+                    fileData.forEach(({ fileName }) => {
+                        const listItem = document.createElement("li");
+                        listItem.textContent = fileName;
+                        listItem.addEventListener("click", () => {
+                            loadFileContent(fileName, fileData);
+                        });
+                        fileListElement.appendChild(listItem);
+                    });
+                    fileContentElement.appendChild(fileListElement);
+                } else {
+                    alert("Failed to load repository: " + data.message);
+                }
+            })
+            .catch((error) => {
+                console.error("Error loading repository", error);
+                alert("An error occurred while loading the repository. Please try again later.");
+            });
+    }
 
+    function loadFileContent(fileName, fileData) {
+        const { fileContent } = fileData.find((file) => file.fileName === fileName);
 
-    function loadFileContent(fileName) { }
+        const textAreaElement = document.createElement("textarea");
+        textAreaElement.value = fileContent;
+
+        const numLines = fileContent.split(/\r\n|\r|\n/).length;
+        textAreaElement.rows = numLines;
+
+        const fileContentElement = document.getElementById("file-content");
+        fileContentElement.innerHTML = "";
+        fileContentElement.appendChild(textAreaElement);
+    }
 
     loadRepository();
 </script>
+
+
+
+
 
 <script>
     // Function to copy content
