--- a/frontend/user.css
+++ b/frontend/user.css
@@ -23,7 +23,7 @@ h1 {
 .header {
   display: flex;
   justify-content: space-between;
-  background-color: #1d1b34;
+  background-color: #17161A;
   color: #fff;
   padding: 20px;
   text-align: center;
@@ -51,13 +51,13 @@ h1 {
   flex: 1;
   padding: 20px;
   text-align: center;
-  background-color: #1d1b34;
+  background-color: #8F66AE;
 }
 
 .chat-container {
   display: flex;
   flex-direction: column;
-  background-color: #1d1b34;
+  background-color: #8F66AE;
   border-radius: 5px;
   justify-content: space-between;
   width: 98%;
@@ -68,7 +68,7 @@ h1 {
 }
 
 .chat-window {
-  background-color: #b0b0b0;
+  background-color: #dadada;
   display: flex;
   flex-direction: column;
   padding: 10px;
@@ -113,17 +113,16 @@ h1 {
 }
 
 #friends-list {
-  /* background-color: #191961; */
   border-radius: 5px;
+  color: rgb(0, 0, 0);
   padding: 10px;
   height: 555px;
-  width: 20%;
+  width: 100%;
   overflow-y: auto;
 }
 
 .friend-item {
   display: flex;
-  /* justify-content: space-around; */
   padding: 5px;
   height: 35px;
   margin-bottom: 5px;
@@ -144,7 +143,7 @@ input[type="text"] {
 }
 
 .repo {
-  background-color: #007bff;
+  background-color: #e7e7e7;
   border-radius: 20px;
   margin-bottom: 50px;
 }
@@ -164,7 +163,7 @@ button {
   justify-content: space-between;
   margin-top: 30px;
   border-radius: 10px;
-  background-color: #007bff;
+  background-color: #d0d0d0;
   color: wheat;
   margin-bottom: 20px;
 }
@@ -172,7 +171,7 @@ button {
 .repository {
   width: 20%;
   height: 200px;
-  background-color: #1d1b34;
+  background-color: #292929;
   border-radius: 20px;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.6);
   cursor: pointer;
@@ -188,7 +187,7 @@ button {
   width: 200px;
   padding: 20px;
   margin: 10px;
-  color: #f0f0f0;
+  color: #000000;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
@@ -206,7 +205,7 @@ button {
 
 #room-input,
 #members {
-  width: 20%;
+  width: 90%;
   margin-bottom: 10px;
 }
 
