--- a/views/user.ejs
+++ b/views/user.ejs
@@ -136,9 +136,7 @@
                         <button onclick="loadFriends()" id="buttonwidth">Friends</button>
                         <button onclick="loadRooms()" id="buttonwidth">Rooms</button>
                     </div>
-                    <div id="friends-list">
-                        <label style="margin: auto; color: white;">Add people to chat</label>
-                    </div>
+                    <div id="friends-list"></div>
                 </div>
 
                 <div class="chat-window" id="chat-window">
