--- a/views/user.ejs
+++ b/views/user.ejs
@@ -101,7 +101,7 @@
             border: solid 1px rgb(92, 92, 92);
             border-radius: 10px;
             width: 500px;
-            height: 300px;
+            height: 400px;
             background-color: rgba(48, 48, 48);
         }
 
@@ -282,17 +282,17 @@
 <script>
     function game(game) {
         if (game == 'tictactoe') {
-            window.location.href = "/TicTacToe";
+            window.location.href = "/Cosmic-Arcade/TicTacToe";
         } else if (game == 'cosmicshoot') {
-            window.location.href = "/cosmicshoot'";
+            window.location.href = "/Cosmic-Arcade/cosmicshoot";
         } else if (game == 'chess') {
-            window.location.href = "/chess";
+            window.location.href = "/Cosmic-Arcade/chess";
         } else if (game == 'truck') {
-            window.location.href = "/truck";
+            window.location.href = "/Cosmic-Arcade/truck";
         } else if (game == 'paint') {
-            window.location.href = "/paint";
+            window.location.href = "/Cosmic-Arcade/paint";
         } else if (game == 'Rock-Paper-Scissors') {
-            window.location.href = "/Rock-Paper-Scissors";
+            window.location.href = "/Cosmic-Arcade/Rock-Paper-Scissors";
         }
     }
 </script>
