--- a/frontend/user.css
+++ b/frontend/user.css
@@ -23,7 +23,7 @@ h1 {
 .header {
   display: flex;
   justify-content: space-between;
-  background-color: #17161A;
+  background-color: #2a292b;
   color: #fff;
   padding: 20px;
   text-align: center;
@@ -49,7 +49,7 @@ h1 {
 
 .section {
   flex: 1;
-  padding: 20px;
+  padding: 3px;
   text-align: center;
   background-color: #8F66AE;
 }
@@ -72,8 +72,8 @@ h1 {
   display: flex;
   flex-direction: column;
   padding: 10px;
-  height: 555px;
-  width: 75%;
+  height: 590px;
+  width: 80%;
   border-radius: 5px;
 }
 
